# ai-ecosystem-workspace

./: .env  .gitignore  compose.yml  pyproject.toml
backend/: pyproject.toml
backend/core/: config.py  label_studio_client.py  label_studio_projects.py  label_studio_setup.py  label_studio_tasks.py  postgres_students.py  worker_settings.py
backend/core/db/: session.py
diagrams/: Assignment_1.rar  overview.drawio
