[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "label-studio-sdk>=1.0.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
]
